--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "axios": "^1.4.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -23,6 +28,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "^5.0.1",
+    "sequelize": "^6.32.1",
     "web-vitals": "^3.3.2"
   },
   "scripts": {
