--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "mysql": "^2.18.1",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
